# tangerineAPI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  remigrate.sh  start.bat  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_issue_form.yml  02_documentation_issue_form.yml  03_enhancement_issue_form.yml  04_normal_issue_form.yml  05_wontfix_issue_form.yml  bug_issue_form.yml  issue_form.yml
.github/workflows/: cd.yml  deploy.yml  jira_bug_issue.yml  jira_documentation_issue.yml  jira_enhancement_issue.yml  jira_normal_issue.yml  jira_wontfix_issue.yml  lint.yml  main.yml
.github/workflows/ISSUE_TEMPLATE/: issue-form.yml
accounts/: adapter.py  managers.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py
api/: permissions.py  urls.py
channels_pulsar/: layer.py  manager.py  middlewares.py
channels_pulsar2/: layer.py  manager.py
chats/: consumers.py  models.py  paginators.py  permissions.py  routing.py  serializers.py  urls.py  views.py
comments/: models.py  serializers.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py
config/: asgi.py  gunicorn_config.py  urls.py  wsgi.py
config/asgi/: base.py  dev.py  prod.py
config/settings/: base.py  dev.py  docker_dev.py  prod.py
config/wsgi/: base.py  dev.py  prod.py
docker/django/: Dockerfile
follows/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
follows/migrations/: 0001_initial.py
images/: models.py  serializers.py  services.py  urls.py  views.py
kafka/: layers.py  managers.py
likes/: models.py  serializers.py  urls.py  views.py
likes/migrations/: 0001_initial.py  0002_initial.py
old/channels_pulsar/: layer.py  manager.py
old/search_indexes/: apps.py
post_images/: apps.py  services.py  urls.py  views.py
posts/: apps.py  converters.py  documents.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
posts/migrations/: 0001_initial.py
products/: managers.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py
profiles/: models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
reports/: models.py  permissions.py  serializers.py  views.py
search_indexes/: apps.py
tests/: _likes.py  conftest.py  likes.py  test_google_login.py  test_likes.py  test_post.py  test_product.py
