[tool.poetry]
name = "tangerineapi"
version = "0.1.0"
description = ""
authors = ["IIH <ds5105119@gmail.com>"]
license = "ILOU"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
channels = "^4.1.0"
django = "^5.1.1"
dj-rest-auth = "^6.0.0"
django-allauth = "^65.0.2"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
django-filter = "^24.3"
django-redis = "^5.4.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.2"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"
pulsar-client = "^3.5.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
redis = "^5.1.0"
ruff = "^0.6.8"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
boto3 = "^1.35.30"
requests = "^2.32.3"
pre-commit = "^3.8.0"
cryptography = "^43.0.1"
wsproto = "^1.2.0"
opencv-python-headless = "^4.10.0.84"
pymilvus = {extras = ["model"], version = "^2.4.8"}
tensorflow = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = ["B", "C4", "E", "F", "N", "I", "W", "UP"]
lint.ignore = ["F403","F405","E501","E402","B904"]
lint.fixable = ["A", "B", "C", "D", "E", "F", "I", "UP"]
lint.unfixable = []
lint.per-file-ignores = {}
line-length = 120
target-version = "py39"
